# open-earth-benchmarks

./: CMakeLists.txt  build.sh  run.sh  run_all.sh  run_one.sh
include/: util.h
kernels/: fastwavesuv.h  fvtp2d.h  hadvuv.h  hadvuv5th.h  hdiffsa.h  hdiffsmag.h  laplace.h  nh_p_grad.h  p_grad_c.h  uvbke.h
src/: fastwavesuv.cpp  fastwavesuv.cu  fvtp2d.cpp  hadvuv.cpp  hadvuv.cu  hadvuv5th.cpp  hadvuv5th.cu  hdiffsa.cpp  hdiffsa.cu  hdiffsmag.cpp  hdiffsmag.cu  laplace.cpp  nh_p_grad.cpp  nh_p_grad.cu  p_grad_c.cpp  p_grad_c.cu  uvbke.cpp  uvbke.cu
